src/templating/snapshots/yolk__templating__parser__test__blank_lines_get_combined.snap
---
source: src/templating/parser.rs
expression: "parse_document(\"\\n\\n\\n\\n\")"
---
Ok(
    [
        Plain(
            [0..4]"\n\n\n\n",
        ),
    ],
)
