src/templating/snapshots/yolk__templating__parser__test__error_if_without_expression.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{<if>}\").unwrap_err())"
---
  × Failed to parse yolk template file

Error: 
  × An if tag requires a condition, e.g. `{< if foo >}`
   ╭─[file:1:5]
 1 │ {<if>}
   ·     ▲
   ·     ╰── condition
   ╰────
