src/templating/snapshots/yolk__templating__parser__test__ignore_keyword_boundary_falls_through.snap
---
source: src/templating/parser.rs
expression: "parse_document(\"{# ignore_case() #}\\nfoo\\n\")"
---
Ok(
    [
        NextLine {
            tagged_line: TaggedLine {
                left: "",
                tag: "{# ignore_case() #}",
                right: "\n",
                full_line: [0..20]"{# ignore_case() #}\n",
            },
            expr: Transform(
                [3..17]"ignore_case() ",
            ),
            next_line: [20..23]"foo",
            full_span: [0..23]"{# ignore_case() #}\nfoo",
        },
        Plain(
            [23..24]"\n",
        ),
    ],
)
