src/templating/snapshots/yolk__templating__parser__test__incomplete_next_line.snap
---
source: src/templating/parser.rs
expression: "parse_document(\"{#f#}\")"
snapshot_kind: text
---
Err(
    YolkParseFailure {
        input: NamedSource {
            name: "file",
            source: "<redacted>",
            language: None,
        ,
        diagnostics: [
            YolkParseDiagnostic {
                input: NamedSource {
                    name: "file",
                    source: "<redacted>",
                    language: None,
                ,
                span: SourceSpan {
                    offset: SourceOffset(
                        4,
                    ),
                    length: 1,
                },
                label: None,
                help: None,
                severity: Error,
                kind: Context(
                    "newline",
                ),
            },
        ],
    },
)
