src/templating/snapshots/yolk__templating__parser__test__parse_end.snap
---
source: src/templating/parser.rs
expression: "p_tag_line(\"{%\", \"end\", \"%}\", false).parse(new_input(\"a{% end %}b\"))"
---
Ok(
    ParsedTagLine {
        line: TaggedLine {
            left: "a",
            tag: "{% end %}",
            right: "b",
            full_line: [0..11]"a{% end %}b",
        },
        inner: [4..7]"end",
    },
)
